refactor: simplify stream collectors, remove unused endpoint, and improve code maintainability with constants in exception handling and armazem mapping.